# langchain-ai-agent

./: .gitignore  README.md  requirements.txt
doc/langchain_agenttype/: langchain_agenttype_guide_ko.md
examples/config/: mcp_server_config.json
examples/data/: api_manual1_faiss_huggingface.faiss  api_manual1_faiss_huggingface.pkl  api_manual1_faiss_openai.faiss  api_manual1_faiss_openai.pkl
examples/python/: 01_duckduckgo_search_openai.py  03_RAG_test_openai.py  04_RAG_test_local.py  05_huggingfaceEmbeddig_test_gpu_vs_cpu.py  06_RAG_reload_openai.py  07_RAG_reload_local.py  08_tavilysearch_chromodb.py  09_mcp_client_local.py  10_mcp_client_openai.py  11_mcp_client_openai_qa.py  12_ConversationBuffer_openai.py  13_ConversationBuffer_local.py  README.md  requirements.txt
examples/rag_basic/: pyproject.toml
examples/rag_basic/04-Model/: 01-hello_gemini.ipynb
